[GEOT-7958] Increase FilterToSqlHelper test coverage