@@ -802,7 +802,8 @@ class FilterToSqlHelper {
         } else if (value instanceof Double) {
             return String.format("(@.%s == %f)", jsonPath[lastIndex], (Double) value);
         }
-        return String.format("(@.%s == \"%s\")", jsonPath[lastIndex], value);
+        String literal = escapeJsonLiteral(String.valueOf(value));
+        return "(@.%s == \"%s\")".formatted(jsonPath[lastIndex], literal);
     }
 
     private String constructPath(String[] jsonPath) {
